--- a/test/example.css
+++ b/test/example.css
@@ -1,4 +1,11 @@
 .block_element.is-mod {
   display: block;
   background: oklch(0% 0 0);
+  animation: --rotating 1s linear infinite;
+}
+
+@keyframes --rotating {
+  100% {
+    rotate: 360deg;
+  }
 }
