Move to float in oklch() since calc() in relative colors has problem with %

--- a/test/example.css
+++ b/test/example.css
@@ -1,6 +1,6 @@
 .block_element.is-mod {
   display: block;
-  background: oklch(0% 0 0);
+  background: oklch(0 0 0);
   animation: --rotating 1s linear infinite;
 }
 
